--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 </section>
 
 <!-- ///////// Contact Us Section //////////// -->
-<section class="Contact" id="contact-us" style="width: 100%; min-height: 100vh;">
+<section class="Contact mb-5" id="contact-us" style="width: 100%; min-height: 100vh;">
     <div class="d-flex row mx-0 justify-content-center align-items-center">
         <div class="col-md-5 col-10 d-flex flex-column justify-content-center align-items-center ps-md-5 mb-4">
             <h2 style="color: #CC6DEA; font-weight: 700; font-size: 40px; font-family: Roboto; line-height: 48px;">Contact US</h2>
@@ -428,9 +428,74 @@
         </div>
     </div>
 </section>
-
 <!-- ////////// Footer //////////// -->
+ <!-- ////////// Footer //////////// -->
+<section class="w-100 mb-5">
+    <div class="pt-5 m-auto" style="border: 1px #EFE7F9 solid; padding-top: 30px; padding-left: 50px; width: 98%;">
+        <div class="row mx-0 d-flex justify-content-between">
+            <div class="col-md-5 col-12">
+                <h2 class="mb-4" style="font-family: Roboto; font-weight: 700; font-size: 20px; color: #CC6DEA; line-height: 23.44px;">About us</h2>
+                <p style="font-family: Roboto; font-size: 18px; font-weight: 400; color: #232D42; line-height: 21.09px;">Phone: (+20) 01090991209</p>
+                <p style="font-family: Roboto; font-size: 18px; font-weight: 400; color: #232D42; line-height: 21.09px;">Email: conversationlist.edu@gmail.com</p>
+                <p style="font-family: Roboto; font-size: 18px; font-weight: 400; color: #232D42; line-height: 21.09px;">
+                    Location: Raden Office Rower - Jln. Inaja Dulu
+                </p>
+                <p style="font-family: Roboto; font-size: 18px; font-weight: 400; color: #232D42; line-height: 21.09px;">No 212 Blok R16. Bandung, Indonesia</p>
+                <p class="mt-5 mb-4" style="font-family: Roboto; font-size: 18px; font-weight: 400; color: #232D42; line-height: 21.09px;">
+                    Follow us: 
+                    <i class="fab fa-youtube icon" style="color: #FF0000; margin-left: 10px;"></i>
+                    <i class="fab fa-twitter icon" style="color: #054CFF;"></i>
+                    <i class="fab fa-linkedin icon" style="color: #000000;"></i>
+                    <i class="fab fa-facebook-square icon" style="color: #054CFF;"></i>
+                </p>
+            </div>
 
+            <div class="col-md-7 col-12 d-flex flex-wrap justify-content-evenly ps-md-5">
+                <!-- <div class="col-md-3 col-4 me-md-3 d-flex flex-column mb-4">
+                    <h2 class="mb-4" style="font-family: Roboto; font-weight: 700; font-size: 20px; line-height: 23.44px; color: #CC6DEA;">Explore</h2>
+                    <p class="mt-2" style="font-family: Roboto; font-weight: 400; font-size: 18px; line-height: 21.09px; color: #000000B2;">About us</p>
+                    <p style="font-family: Roboto; font-weight: 400; font-size: 18px; line-height: 21.09px; color: #000000B2;">Courses</p>
+                    <p style="font-family: Roboto; font-weight: 400; font-size: 18px; line-height: 21.09px; color: #000000B2;">Contact us</p>
+                </div> -->
+                <div class="col-md-3 col-4 me-md-3 d-flex flex-column mb-4" id="first">
+                    <h2 class="mb-4" style="font-family: Roboto; font-weight: 700; font-size: 20px; line-height: 23.44px; color: #CC6DEA;">Explore</h2>
+                    <p class="mt-2" style="font-family: Roboto; font-weight: 400; font-size: 18px; line-height: 21.09px; color: #000000B2;">About us</p>
+                    <p style="font-family: Roboto; font-weight: 400; font-size: 18px; line-height: 21.09px; color: #000000B2;">Courses</p>
+                    <!-- <p style="font-family: Roboto; font-weight: 400; font-size: 18px; line-height: 21.09px; color: #000000B2;">Product Design</p> -->
+                    <p style="font-family: Roboto; font-weight: 400; font-size: 18px; line-height: 21.09px; color: #000000B2;">Contact us</p>
+                </div>
+                
+                <div class="col-md-3 col-4 me-md-3 d-flex flex-column mb-4" id="middle">
+                    <h2 class="mb-4" style="font-family: Roboto; font-weight: 700; font-size: 20px; line-height: 23.44px; color: #CC6DEA;">Top Category</h2>
+                    <p class="mt-2" style="font-family: Roboto; font-weight: 400; font-size: 18px; line-height: 21.09px; color: #000000B2;">Programming</p>
+                    <p style="font-family: Roboto; font-weight: 400; font-size: 18px; line-height: 21.09px; color: #000000B2;">Business</p>
+                    <p style="font-family: Roboto; font-weight: 400; font-size: 18px; line-height: 21.09px; color: #000000B2;">Product Design</p>
+                    <p style="font-family: Roboto; font-weight: 400; font-size: 18px; line-height: 21.09px; color: #000000B2;">Marketing</p>
+                </div>
+
+                <div class="col-md-3 col-4 d-flex flex-column mb-4">
+                    <h2 class="mb-4" style="font-family: Roboto; font-weight: 700; font-size: 20px; line-height: 23.44px; color: #CC6DEA;">Information</h2>
+                    <p class="mt-2" style="font-family: Roboto; font-weight: 400; font-size: 18px; line-height: 21.09px; color: #000000B2;">Membership</p>
+                    <p style="font-family: Roboto; font-weight: 400; font-size: 18px; line-height: 21.09px; color: #000000B2;">Terms of service</p>
+                    <p style="font-family: Roboto; font-weight: 400; font-size: 18px; line-height: 21.09px; color: #000000B2;">Privacy Policy</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="mt-4" style="width: 96%; height: 1px; background-color: #EFE7F9;"></div>
+
+        <div class="row mt-5 mb-5 mx-0 d-flex justify-content-between align-items-center" style="width: 98%;">
+            <div class="col-md-6 col-12 d-flex align-items-center">
+                <img class="header-img me-3" id="img-footer" style="border-radius: 8px;" src="images/The Conversationalists Logo 1.png">
+                <a class="navbar-brand logo" style="font-family: Chewy; font-weight: 400; font-size: 24px; line-height: 31.36px;" href="#">The Conversationalist</a>
+            </div>
+
+            <div class="col-md-5 col-12 text-md-end mt-2 mt-md-0">
+                <p style="color: #4c4a4d; font-weight: 500;">2024 All Rights Reserved By Ubiquitous Learning</p>
+            </div>
+        </div>
+    </div>
+</section>
     <script src="js/index.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
