--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 <!-- ////////////// About Us ///////////////// -->
 <section class="about" id="Home">
-    <div class="about-info text-center row d-flex justify-content-center align-items-center m-0">
+    <div class="about-info text-center row d-flex justify-content-center align-items-center m-0 ">
         <h2 class="about-info-h2 col-12 mb-1" style="color:#472652; font-family: 'Poppins'; font-size: 44px; font-weight: 600; line-height: 79.2px;">
             What is <span style="color: #CC6DEA; font-family: 'Chewy'; font-size: 44px; font-weight: 400; line-height: 79.2px;">Conversationalists</span>
         </h2>
@@ -141,17 +141,17 @@
         </span>
     </div>
     <div class="row mx-0 d-flex justify-content-evenly align-items-center mt-3">
-        <div class="slideshow-container mb-2 about-img-1 col-12 col-md-6" style="border-radius: 20px !important;">
+        <div class="slideshow-container  about-img-1 col-12 col-md-6" style="border-radius: 20px !important;">
             <img id="slideshow-img" src="images/Rectangle 4153.png" class="img-fluid" style="border-radius: 20px;" alt="img1">
         </div>
-        <div class=" about-img-12 col-12 col-md-5 position-relative">
+        <div class="slideshow-container imge-about  about-img-1 about-img-1-info col-12 col-md-6 position-relative">
             <img src="images/Group 23.png" class="img-fluid" style="border-radius: 20px;" alt="img1">
             <div class="about-img-1-info" style="color: #fff; position: absolute; top: 40%; left: 50%; transform: translate(-50%, -50%); text-align: center;">
                 <h2 class="for-student" style="font-family: Roboto; font-weight: 600; line-height: 37.5px; font-size: 32px;">FOR STUDENTS</h2>
                 <button class="srart-learning mt-2" style="background-color: #CC6DEA; border-radius: 80px;" type="submit">Start learning</button>
             </div>
         </div>
-        <div class="col-12 col-md-6 mb-5  ">
+        <div class=" about-img-1 col-12 col-md-6   ">
             <h3 class="every mt-3" style="font-family: Poppins; color: #104728; font-weight: 500; font-size: 24px; line-height: 57.6px;">
                 Everything you can do in a physical <p class="can-do m-0 p-0" style="font-family: Poppins; font-weight: 500; font-size: 23px; color: #CC6DEA;">you can do with <span class="conver" style="font-family: Roboto; font-weight: 700; font-size: 23px; ">Conversationalist</span></p>
             </h3>
@@ -160,7 +160,7 @@
             </p>
             <a href="#" class="about-link" style="color: #472652; height: 33.88px; width: 130.49px;">Learn more</a>
         </div>
-        <div class=" about-img-12 col-12 col-md-5  video-about">
+        <div class="slideshow-vidoe imge-about  about-img-1 col-12 col-md-6">
             <img src="images/Group 469373.png" class="img-fluid teacher-img" style="border-radius: 15px;" alt="img1">
         </div>
     </div>
@@ -293,7 +293,7 @@
                         <span class="card-span" style="font-size: 13px; font-family: Roboto; font-weight: 600; font-size: 12px; line-height: 14.06px; color: #334155;">(1200 Ratings)</span>
                     </div>
                 </div>
-                <div class=" d-flex justify-content-center   mt-5   ">
+                <div class=" d-flex justify-content-center   mt-5  experience-parent ">
 
                 <div class=" ">
                     <div class="d-flex experience">
