--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
     <section
       class="courses-section container"
       id="Review"
-      style="padding-top: 100px"
+      style="margin-top: -100px"
     >
       <div
         class="courses-header mb-4 d-flex justify-content-between align-items-center"
@@ -1330,12 +1330,12 @@
     <!-- ////////// Footer //////////// -->
     <section class="w-100 mb-5">
       <div
-        class="pt-5 m-auto"
+        class=""
         style="
           border: 1px #efe7f9 solid;
           padding-top: 30px;
-          padding-left: 50px;
           width: 98%;
+          overflow-x: hidden;
         "
       >
         <div class="row mx-0 d-flex justify-content-between">
@@ -1417,178 +1417,27 @@
             </p>
           </div>
 
-          <div
-            class="col-md-7 col-12 d-flex flex-wrap justify-content-evenly ps-md-5"
-          >
-            <div
-              class="col-md-3 col-4 me-md-3 d-flex flex-column mb-4"
-              id="first"
-            >
-              <h2
-                class="mb-4 explore"
-                style="
-                  font-family: Roboto;
-                  font-weight: 700;
-                  font-size: 20px;
-                  line-height: 23.44px;
-                  color: #cc6dea;
-                "
-              >
-                Explore
-              </h2>
-              <p
-                class="mt-2 explore-content"
-                style="
-                  font-family: Roboto;
-                  font-weight: 400;
-                  font-size: 18px;
-                  line-height: 21.09px;
-                  color: #000000b2;
-                "
-              >
-                About us
-              </p>
-              <p
-                class="explore-content"
-                style="
-                  font-family: Roboto;
-                  font-weight: 400;
-                  font-size: 18px;
-                  line-height: 21.09px;
-                  color: #000000b2;
-                "
-              >
-                Courses
-              </p>
-              <p
-                class="explore-content"
-                style="
-                  font-family: Roboto;
-                  font-weight: 400;
-                  font-size: 18px;
-                  line-height: 21.09px;
-                  color: #000000b2;
-                "
-              >
-                Contact us
-              </p>
+          <div class="col-md-7 col-12 d-flex flex-wrap justify-content-between">
+            <div class="col-md-3 col-4 me-md-3 d-flex flex-column mb-4" id="first">
+              <h2 class="mb-4 explore">Explore</h2>
+              <p class="mt-2 explore-content">About us</p>
+              <p class="explore-content">Courses</p>
+              <p class="explore-content">Contact us</p>
             </div>
-
-            <div
-              class="col-md-3 col-4 me-md-3 d-flex flex-column mb-4"
-              id="middle"
-            >
-              <h2
-                class="mb-4 explore"
-                style="
-                  font-family: Roboto;
-                  font-weight: 700;
-                  font-size: 20px;
-                  line-height: 23.44px;
-                  color: #cc6dea;
-                "
-              >
-                Top Category
-              </h2>
-              <p
-                class="mt-2 explore-content"
-                style="
-                  font-family: Roboto;
-                  font-weight: 400;
-                  font-size: 18px;
-                  line-height: 21.09px;
-                  color: #000000b2;
-                "
-              >
-                Programming
-              </p>
-              <p
-                class="explore-content"
-                style="
-                  font-family: Roboto;
-                  font-weight: 400;
-                  font-size: 18px;
-                  line-height: 21.09px;
-                  color: #000000b2;
-                "
-              >
-                Business
-              </p>
-              <p
-                class="explore-content"
-                style="
-                  font-family: Roboto;
-                  font-weight: 400;
-                  font-size: 18px;
-                  line-height: 21.09px;
-                  color: #000000b2;
-                "
-              >
-                Product Design
-              </p>
-              <p
-                class="explore-content"
-                style="
-                  font-family: Roboto;
-                  font-weight: 400;
-                  font-size: 18px;
-                  line-height: 21.09px;
-                  color: #000000b2;
-                "
-              >
-                Marketing
-              </p>
+        
+            <div class="col-md-3 col-4 me-md-3 d-flex flex-column mb-4" id="middle">
+              <h2 class="mb-4 explore">Top Category</h2>
+              <p class="mt-2 explore-content">Programming</p>
+              <p class="explore-content">Business</p>
+              <p class="explore-content">Product Design</p>
+              <p class="explore-content">Marketing</p>
             </div>
-
+        
             <div class="col-md-3 col-4 d-flex flex-column mb-4">
-              <h2
-                class="mb-4 explore"
-                style="
-                  font-family: Roboto;
-                  font-weight: 700;
-                  font-size: 20px;
-                  line-height: 23.44px;
-                  color: #cc6dea;
-                "
-              >
-                Information
-              </h2>
-              <p
-                class="mt-2 explore-content"
-                style="
-                  font-family: Roboto;
-                  font-weight: 400;
-                  font-size: 18px;
-                  line-height: 21.09px;
-                  color: #000000b2;
-                "
-              >
-                Membership
-              </p>
-              <p
-                class="explore-content"
-                style="
-                  font-family: Roboto;
-                  font-weight: 400;
-                  font-size: 18px;
-                  line-height: 21.09px;
-                  color: #000000b2;
-                "
-              >
-                Terms of service
-              </p>
-              <p
-                class="explore-content"
-                style="
-                  font-family: Roboto;
-                  font-weight: 400;
-                  font-size: 18px;
-                  line-height: 21.09px;
-                  color: #000000b2;
-                "
-              >
-                Privacy Policy
-              </p>
+              <h2 class="mb-4 explore">Information</h2>
+              <p class="mt-2 explore-content">Membership</p>
+              <p class="explore-content">Terms of service</p>
+              <p class="explore-content">Privacy Policy</p>
             </div>
           </div>
         </div>
