--- a/index.html
+++ b/index.html
@@ -442,20 +442,13 @@
       <div class="d-flex row mx-0">
         <div class="swiper-container mySwiper">
           <div class="swiper-wrapper">
+           
             <div class="swiper-slide">
-              <div
-                class="card"
-                style="border: 0; width: 300.14px; height: 350px"
-              >
+              <div class="card">
                 <img
                   src="images/Rectangle 4147.png"
                   class="card-img-top"
-                  style="
-                    border-radius: 10px !important;
-                    height: 133.92px !important;
-                    width: 293.97px;
-                  "
-                  alt="card0img1"
+                  alt="card-img2"
                 />
                 <div class="card-body">
                   <h5 class="card-title">Beginner’s Guide to Design</h5>
@@ -1178,7 +1171,7 @@
     <section
       class="Contact mb-5"
       id="contact-us"
-      style="width: 100%; min-height: 100vh"
+      style="width: 100%; "
     >
       <div class="d-flex row mx-0 justify-content-center align-items-center">
         <div
@@ -1328,7 +1321,7 @@
     </section>
 
     <!-- ////////// Footer //////////// -->
-    <section class="w-100 mb-5">
+    <section class=" mb-5">
       <div
         class=""
         style="
@@ -1338,8 +1331,10 @@
           overflow-x: hidden;
         "
       >
-        <div class="row mx-0 d-flex justify-content-between">
-          <div class="col-md-5 col-12">
+        <div class="row mx-0 d-flex ">
+<div class=" explore-parent-1 ">
+
+          <div class="2">
             <h2
               class="mb-4"
               style="
@@ -1417,7 +1412,7 @@
             </p>
           </div>
 
-          <div class="col-md-7 col-12 d-flex flex-wrap justify-content-between">
+          <div class="  explore-parent ">
             <div class="col-md-3 col-4 me-md-3 d-flex flex-column mb-4" id="first">
               <h2 class="mb-4 explore">Explore</h2>
               <p class="mt-2 explore-content">About us</p>
@@ -1433,13 +1428,15 @@
               <p class="explore-content">Marketing</p>
             </div>
         
-            <div class="col-md-3 col-4 d-flex flex-column mb-4">
+            <div class="col-md-3 col-4 d-flex flex-column mb-4" id="last">
               <h2 class="mb-4 explore">Information</h2>
               <p class="mt-2 explore-content">Membership</p>
               <p class="explore-content">Terms of service</p>
               <p class="explore-content">Privacy Policy</p>
             </div>
           </div>
+        </div>
+
         </div>
 
         <div
