--- a/index.html
+++ b/index.html
@@ -1334,13 +1334,12 @@
         <div class="row mx-0 d-flex ">
 <div class=" explore-parent-1 ">
 
-          <div class="2">
+          <div class="e2">
             <h2
               class="mb-4"
               style="
                 font-family: Roboto;
                 font-weight: 700;
-                font-size: 20px;
                 color: #cc6dea;
                 line-height: 23.44px;
               "
@@ -1350,7 +1349,6 @@
             <p
               style="
                 font-family: Roboto;
-                font-size: 18px;
                 font-weight: 400;
                 color: #232d42;
                 line-height: 21.09px;
@@ -1361,7 +1359,6 @@
             <p
               style="
                 font-family: Roboto;
-                font-size: 18px;
                 font-weight: 400;
                 color: #232d42;
                 line-height: 21.09px;
@@ -1372,7 +1369,6 @@
             <p
               style="
                 font-family: Roboto;
-                font-size: 18px;
                 font-weight: 400;
                 color: #232d42;
                 line-height: 21.09px;
@@ -1383,7 +1379,6 @@
             <p
               style="
                 font-family: Roboto;
-                font-size: 18px;
                 font-weight: 400;
                 color: #232d42;
                 line-height: 21.09px;
@@ -1395,7 +1390,6 @@
               class="mt-5 mb-4"
               style="
                 font-family: Roboto;
-                font-size: 18px;
                 font-weight: 400;
                 color: #232d42;
                 line-height: 21.09px;
