--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
       </div>
 
       <div
-        class="row mx-0 d-flex justify-content-evenly align-items-center mb-2"
+        class="row mx-0 d-flex justify-content-evenly align-items-center mb-2 container"
       >
         <div
           class="col-12 col-md-4 d-flex justify-content-between align-items-start mb-4 mb-md-0"
